@@ -25,3 +25,5 @@ could perhaps change it to `/sandbox-comments.atom` or
 > Particularly for the non-usedirs case, where a page `sandbox/comments`
 > would produce the same feed as sandbox with `feedname=comments`.
 > --[[Joey]]
+
+> [[done]] as feedfile option --[[Joey]]
