@@ -11,6 +11,8 @@ ikiwiki (2.71) UNRELEASED; urgency=low
   * Correct --dumpsetup to include the srcdir in the setup file.
   * German translation update from Kai Wasserbäch. Closes: #507056
   * inline: Support emptyfeeds=no option to skip generating empty feeds.
+  * inline: Support feedfile option to change the filename of the feed
+    generated.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
 
